<resources>
    <string name="app_name">Insight</string>
    <string name="swipe_left_to_register">Swipe Left To Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag"> Intelligent System for Inspiring Glucose-related health management for Hispanic individuals with Type 2 Diabetes</string>
    <string name="swipe_right_to_login">Swipe Right To Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="name">Full Name</string>
    <string name="first_name">First</string>
    <string name="last_name">Last</string>
    <string name="middle_name">Middle</string>
    <string name="address">Address</string>
    <string name="insight_logo">Insight Logo</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="language">Language</string>
    <string name="type_of_account">Type of Account:</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="language_preference">Language Preference:</string>
    <string name="both">Both</string>
    <string name="patient">Patient</string>
    <string name="family_member">Family Member</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_registered_create_a_new_account">Not Registered? Create a New Account</string>
    <string name="cont">Continue</string>
    <string name="patient_info">Patient Info</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_answer">Prefer Not To Answer</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="ft">ft.</string>
    <string name="in">in.</string>
    <string name="medication">Medication</string>
    <string name="lb">lb</string>
    <string name="medication_title">My Medication</string>
    <string name="add_medication_title">Add Medicine</string>
    <string name="medication_search_name">Medication Name</string>
    <string name="medication_search_description">Medication Description</string>
    <string name="weight_data_input">150</string>
    <string name="mass_unit">lbs</string>
    <string name="date">Sunday, August 2, 2020</string>
    <string name="weight_log">Weight Log</string>
    <string-array name="inches">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="Feet">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>
