<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@drawable/tri"
    tools:context=".fragments.RegisterFragment3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint_layout1">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/patient_info"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/grid1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:padding="10dp"
            android:rowCount="3"
            app:layout_constraintBottom_toTopOf="@id/btn_continue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintVertical_bias="0.08">

            <TextView
                android:layout_width="100dp"
                android:layout_row="0"
                android:layout_column="0"
                android:padding="20dp"
                android:text="@string/height"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_row="1"
                android:layout_column="0"
                android:padding="20dp"
                android:text="@string/weight"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_row="2"
                android:layout_column="0"
                android:padding="20dp"
                android:text="@string/sex"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_height_ft"
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:entries="@array/Feet"
                android:padding="10dp" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:hint="@string/weight"
                android:padding="10dp" />

            <Spinner
                android:id="@+id/sp_sex"
                android:layout_width="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:entries="@array/sex"
                android:padding="10dp"
                android:prompt="@string/ft" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:padding="10dp"
                android:text="@string/ft" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:padding="10dp"
                android:text="@string/lb" />

            <Spinner
                android:id="@+id/sp_height_in"
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:entries="@array/inches"
                android:padding="10dp"
                android:prompt="@string/inches" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="4"
                android:padding="10dp"
                android:text="@string/in" />
        </GridLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="sans-serif"
            android:text="@string/cont"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>