<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@drawable/tri"
    tools:context=".fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint_layout1">

        <Switch
            android:id="@+id/sw_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:checked="false"
            android:text="@string/spanish"
            app:layout_constraintBottom_toTopOf="@id/iv_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/insight_logo"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/tv_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_language" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_rb_description_lang"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_rb_description_lang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/language_preference"
            app:layout_constraintBottom_toTopOf="@id/rg_language"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"/>

        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/et_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rb_description_lang">

            <RadioButton android:id="@+id/radio_english"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/english" />
            <RadioButton
                android:id="@+id/radio_spanish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/spanish" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="sans-serif"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@id/et_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_language"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@id/et_repassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"/>

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="sans-serif"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@id/tv_rb_description_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"/>

        <TextView
            android:id="@+id/tv_rb_description_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/type_of_account"
            app:layout_constraintBottom_toTopOf="@id/rg_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_repassword" />

        <RadioGroup
            android:id="@+id/rg_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_continue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rb_description_account">

            <RadioButton android:id="@+id/radio_patient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/patient" />
            <RadioButton
                android:id="@+id/radio_family_member"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/family_member" />
            <RadioButton android:id="@+id/radio_both"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/both" />
        </RadioGroup>
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="sans-serif"
            android:text="@string/cont"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_account"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>